--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
 <body>
  
     
-    
-<!--Javascript eingefügt-->
-<script src="/js/main.js"></script>
-<script src="/js/bash/bash-pwa.js"></script>
-<script src="/js/classes/class.bash.js"></script>
+
 <!--JQuery über CDN eingefügt-->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<!--Javascript eingefügt-->
+<script type="module" src="/js/main.js"></script>
 </body>
 
 </html>
