--- a/index.html
+++ b/index.html
@@ -1,25 +1,18 @@
-<!-- TODO: Skeleton (style.css, main.js -->
 <!DOCTYPE html>
 <html lang="de">
-
 <head>
     <meta charset="UTF-8">
-    <!--Um das Responsive zu erleichtern-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Unser stylesheet CSS eingefügt-->
     <link rel="stylesheet" href="/css/style.css">
-    <!--Unser Titel-->
     <title>Tennis-Bash</title>
 </head>
-
 <body>
- 
-    
-
-<!--JQuery über CDN eingefügt-->
-<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-<!--Javascript eingefügt-->
-<script type="module" src="/js/main.js"></script>
+    <header>
+    </header>
+    <div id="bash_app"></div>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script type="module" src="/js/main.js"></script>
+    <footer>
+    </footer>
 </body>
-
 </html>
