--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </header>
     <div id="bash_app"></div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script type="module" src="/js/main.js"></script>
+    <script type="module" src="./js/main.js"></script>
     <footer>
     </footer>
 </body>
