--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <header>
-        MEGAGEILES LOGO!!!
+        <nav>
+            <img id="clublogo" src="" alt="clublogo"> <!--links oben das logo des clubs-->
+            <button type="button" id="clubsettings">Club-Settings</button> <!--clubsetting button für admin, ausblenden wenn rolle = knecht-->
+            <button type="button" id="usersettings">User-Settings</button> 
+        </nav>
     </header>
     <div id="bash_app"></div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
